# RulesLawyer

./: .gitattributes  .gitignore  README.md  SRD_embeddings.csv  SwordsAndWizardry_enhanced_output.json  SwordsAndWizardry_output_embeddings.csv  app.py  pdf_to_embeddings.py  pyproject.toml  pytest.ini  requirements.txt
Learnings/poetry_env/: docling.md
document_processing/: docling_core_type_document.py  embedding_generator.py  json_utils.py  pdf_processor.py  pdf_utils.py  summarizer.py  utilities.py
tests/: _processpdf.py  conftest.py  test_debug.py  test_file_utils.py  test_json_utils.py
