[tool.poetry]
name = "ruleslawyer"
version = "0.1.0"
description = "Ingest PDFs, process into a json, generate embeddings, and load into a chat interface for RAG."
authors = ["Alan Meigs <alan.meigs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.2"
openai = "^1.53.0"
gradio = "^5.4.0"
sentence-transformers = "^3.2.1"
torch = "^2.5.1"
docling-core = "^2.3.1" # This may need to be updated to the correct version.


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
