[tool.poetry]
name = "ruleslawyer"
version = "0.1.0"
description = "Ingest PDFs, process into a json, generate embeddings, and load into a chat interface for RAG."
authors = ["Alan Meigs <alan.meigs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
langchain-text-splitters = "^0.3.2"
sentence-transformers = "^3.3.1"
langchain-huggingface = "^0.1.2"
docling-core = {path = "docling-core"}
gradio = "^5.6.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
